feat: /user/:id/reservations (#3 .2)
- 유저의 예약 상태를 모두 가져오는 리퀘스트
