# src/models/user/queries/userReservationSelect.query.ts
@@ -1,0 +1,16 @@
+export const UserReservationSelectQuery = {
+  id: true,
+  mentorId: true,
+  menteeId: true,
+  categoryId: true,
+  requestMessage: false,
+  status: true,
+  hashtags: {
+    select: {
+      id: true,
+      name: true,
+    },
+  },
+  createdAt: true,
+  updatedAt: true,
+};
