# src/models/user/user.controller.ts
@@ -16,6 +16,8 @@ import { UserCreatePayloadDto } from './dto/request/userCreatePayload.dto';
 import { UserUpdatePayloadDto } from './dto/request/userUpdatePayload.dto';
 import { UserGetResponseDto } from './dto/response/userGetResponse.dto';
 import { GetUserQueryDto } from './dto/request/userQuery.dto';
+import { UserReservationGetDto } from './dto/response/userReservationGet.dto';
+import { GetUserReservationQueryDto } from './dto/request/userReservationQuery.dto';
 
 @Controller('/users')
 export class UserController {
@@ -52,5 +54,16 @@ export class UserController {
   async verifyNickname(@Param('nickname') nickname: string): Promise<void> {
     const user = await this.userService.findByNickname(nickname);
     if (user) throw new ConflictException();
+  }
+
+  @Get('/:id/reservations')
+  async getUserReservations(
+    @Param('id') id: number,
+    @Query() query: GetUserReservationQueryDto,
+  ): Promise<UserReservationGetDto> {
+    if (id < 0) throw new BadRequestException();
+    const reservations = await this.userService.findUserReservation(id, query);
+    if (!reservations) throw new BadRequestException();
+    return reservations;
   }
 }
