# src/models/user/user.service.ts
@@ -5,6 +5,10 @@ import { UserCreatePayloadDto } from './dto/request/userCreatePayload.dto';
 import { UserUpdatePayloadDto } from './dto/request/userUpdatePayload.dto';
 import { UserGetResponseDto } from './dto/response/userGetResponse.dto';
 import { GetUserQueryDto } from './dto/request/userQuery.dto';
+import { ReservationStatus } from '@prisma/client';
+import { UserReservationGetDto } from './dto/response/userReservationGet.dto';
+import { GetUserReservationQueryDto } from './dto/request/userReservationQuery.dto';
+import { UserReservationSelectQuery } from './queries/userReservationSelect.query';
 
 @Injectable()
 export class UserService {
@@ -62,5 +66,46 @@ export class UserService {
       data: payload,
       select: UserSelectQuery,
     });
+  }
+
+  async findUserReservation(
+    id: number,
+    query: GetUserReservationQueryDto,
+  ): Promise<UserReservationGetDto> {
+    const { take, page, as_mentor, as_mentee } = query;
+    let menteeReservations;
+    let mentorReservations;
+    if (as_mentee) {
+      menteeReservations = await this.prisma.reservation.findMany({
+        where: {
+          menteeId: id,
+          OR: [{ status: ReservationStatus.REQUEST }, { status: ReservationStatus.ACCEPT }],
+        },
+        select: UserReservationSelectQuery,
+        take: take,
+        skip: take * page,
+        orderBy: {
+          updatedAt: 'desc',
+        },
+      });
+    }
+    if (as_mentor) {
+      mentorReservations = await this.prisma.reservation.findMany({
+        where: {
+          mentorId: id,
+          OR: [{ status: ReservationStatus.REQUEST }, { status: ReservationStatus.ACCEPT }],
+        },
+        select: UserReservationSelectQuery,
+        take: take,
+        skip: take * page,
+        orderBy: {
+          updatedAt: 'desc',
+        },
+      });
+    }
+    return {
+      menteeReservations,
+      mentorReservations,
+    };
   }
 }
